--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
                         <div>
                             <label class="block text-gray-400 mb-2">Ad Soyad</label>
                             <input type="text" id="name" name="name" required
-                                class="w-full bg-dark-primary border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-emerald-500">
+                                class="w-full bg-dark-primary border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-emerald-500 appearance-none">
                         </div>
                         <div>
                             <label class="block text-gray-400 mb-2">Yaş</label>
                             <input type="number" id="age" name="age" required min="15" max="100"
-                                class="w-full bg-dark-primary border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-emerald-500">
+                                class="w-full bg-dark-primary border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-emerald-500 appearance-none">
                         </div>
                         <div>
                             <label class="block text-gray-400 mb-2">Kilo (kg)</label>
                             <input type="number" id="weight" name="weight" required min="30" max="300"
-                                class="w-full bg-dark-primary border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-emerald-500">
+                                class="w-full bg-dark-primary border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-emerald-500 appearance-none">
                         </div>
                         <div>
                             <label class="block text-gray-400 mb-2">Boy (cm)</label>
                             <input type="number" id="height" name="height" required min="100" max="250"
-                                class="w-full bg-dark-primary border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-emerald-500">
+                                class="w-full bg-dark-primary border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-emerald-500 appearance-none">
                         </div>
                     </div>
 
@@ -69,7 +69,7 @@
                         <div>
                             <label class="block text-gray-400 mb-2">Cinsiyet</label>
                             <select id="gender" name="gender" required
-                                class="w-full bg-dark-primary border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-emerald-500">
+                                class="w-full bg-dark-primary border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-emerald-500 appearance-none">
                                 <option value="">Seçiniz</option>
                                 <option value="male">Erkek</option>
                                 <option value="female">Kadın</option>
@@ -78,7 +78,7 @@
                         <div>
                             <label class="block text-gray-400 mb-2">Hedef</label>
                             <select id="goal" name="goal" required
-                                class="w-full bg-dark-primary border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-emerald-500">
+                                class="w-full bg-dark-primary border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-emerald-500 appearance-none">
                                 <option value="">Seçiniz</option>
                                 <option value="loss">Kilo Verme</option>
                                 <option value="maintain">Kilo Koruma</option>
@@ -90,7 +90,7 @@
                     <div>
                         <label class="block text-gray-400 mb-2">Aktivite Seviyesi</label>
                         <select id="activity" name="activity" required
-                            class="w-full bg-dark-primary border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-emerald-500">
+                            class="w-full bg-dark-primary border border-gray-600 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-emerald-500 appearance-none">
                             <option value="">Seçiniz</option>
                             <option value="1.2">Hareketsiz (Günlük aktivite yok)</option>
                             <option value="1.375">Hafif Aktif (Haftada 1-3 gün egzersiz)</option>
