--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div>
                             <label for="antrenmanGender" class="block text-sm font-medium text-gray-400 mb-2">Cinsiyet</label>
-                            <select id="antrenmanGender" name="antrenmanGender" required class="w-full bg-dark-primary text-white rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-dark-accent">
+                            <select id="antrenmanGender" name="antrenmanGender" required class="w-full bg-dark-primary text-white rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-dark-accent appearance-none">
                                 <option value="">Seçiniz</option>
                                 <option value="male">Erkek</option>
                                 <option value="female">Kadın</option>
@@ -127,7 +127,7 @@
                         </div>
                         <div>
                             <label for="level" class="block text-sm font-medium text-gray-400 mb-2">Seviye</label>
-                            <select id="level" name="level" required class="w-full bg-dark-primary text-white rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-dark-accent">
+                            <select id="level" name="level" required class="w-full bg-dark-primary text-white rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-dark-accent appearance-none">
                                 <option value="">Seçiniz</option>
                                 <option value="beginner">Başlangıç</option>
                                 <option value="intermediate">Orta Seviye</option>
@@ -136,7 +136,7 @@
                         </div>
                         <div>
                             <label for="programStyle" class="block text-sm font-medium text-gray-400 mb-2">Program Stili</label>
-                            <select id="programStyle" name="programStyle" required class="w-full bg-dark-primary text-white rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-dark-accent">
+                            <select id="programStyle" name="programStyle" required class="w-full bg-dark-primary text-white rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-dark-accent appearance-none">
                                 <option value="">Seçiniz</option>
                                 <option value="fullbody">Full Body</option>
                                 <option value="ppl">Push Pull Legs</option>
@@ -144,7 +144,7 @@
                         </div>
                         <div>
                             <label for="days" class="block text-sm font-medium text-gray-400 mb-2">Gün Sayısı</label>
-                            <select id="days" name="days" required class="w-full bg-dark-primary text-white rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-dark-accent">
+                            <select id="days" name="days" required class="w-full bg-dark-primary text-white rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-dark-accent appearance-none">
                                 <option value="">Seçiniz</option>
                                 <option value="2">2 Gün</option>
                                 <option value="3">3 Gün</option>
